turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:16: error: ')' expected but ';' found.
    setPos(8;33)
            ^Turmite:16: error: ';' expected but ')' found.
    setPos(8;33)
               ^